k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rbi
  labels:
    app.kubernetes.io/part-of: rbi-web-isolation
